# MarkDowner

./: .gitignore  BASELINE.md  CHANGELOG.md  FINAL-IMPLEMENTATION-REPORT.md  GEMINI-REVIEW.md  INSTALL.md  LICENSE  MIGRATION.md  MarkDowner-build-plan.md  MarkDowner-spec.md  README.md  REMOVALS.md  RTF_NATIVE_STATUS.md  SECURITY.md  STATUS.md  USAGE.md  USER_GUIDE.md  fix.MD  pyproject.toml  quality-report.md  sample.txt  steps.MD
.github/workflows/: ci.yml
artifacts/: Financial-Analysis-Draft.markdowner.native.md
src/markdowner/: __init__.py  __main__.py  _base_converter.py  _bounded_stream.py  _core.py  _exceptions.py  _limits.py  _sandbox.py  _stream_info.py  _temp_utils.py
src/markdowner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/markdowner/converters/: __init__.py  _audio_converter.py  _csv_converter.py  _docx_converter.py  _epub_converter.py  _html_converter.py  _image_converter.py  _outlook_msg_converter.py  _pdf_converter.py  _plain_text_converter.py  _pptx_converter.py  _rtf_control_map.py  _rtf_converter.py  _rtf_ir.py  _rtf_lexer.py  _rtf_parser.py  _rtf_renderer.py  _xls_converter.py  _xlsx_converter.py  _zip_converter.py  _zip_package_helpers.py
tests/: __init__.py  test_cli_parity.py  test_conversion_parity.py  test_fixture_corpus.py  test_outlook_msg_converter.py  test_rtf_converter.py  test_rtf_lexer.py  test_rtf_parser.py  test_rtf_renderer.py  test_security_limits.py  test_security_regressions.py  test_zip_behavior.py
tests/test_files/: rtf_csv_like_sample.rtf  sample.csv  sample.docx  sample.html  sample.rtf  sample.txt  sample.xls  sample.xlsx
tests/test_files/rtf/: csv_like_noise.rtf  cyrillic_cp1251.rtf  simple.rtf  unicode.rtf
tests/test_files/rtf_expected/: csv_like_noise.md  simple.md  unicode.md
